feat(config): 迁移漂浮物类型配置并添加动态管理功能
- 将漂浮物类型配置从 config.yml 分离到独立的 types.yml 文件
- 添加 /hooked type 命令用于动态管理漂浮物类型和掉落物
- 实现类型增删改查及掉落物编辑功能
- 添加 loot message 显示选项，支持 action_bar/chat/both/none 模式
- 实现史诗掉落公屏广播功能（概率 < 10%）
- 添加物品中文名称映射，优化掉落提示显示
- 调整默认配置参数：最大漂浮物数量减少到 10，生成间隔增加到 10 秒
- 扩大生成范围到 28 格，加快钩取动画速度到 1.0 格/刻
- 缩短钩取冷却时间到 1 秒，启用调试模式便于开发